[package]
name = "fresnel"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.10.1" }
nalgebra = { version = "0.35.0" }
smallvec = { version = "1.15.1" }

anyhow = "1.0.102"
arrow = "58.3.0"
chrono = "0.4.44"
parquet = "58.3.0"
serde = { version = "1.0.219", features = ["derive"] }
arc-swap = { version = "1.9.2" }
boxcar = { version = "0.2.14" }

[features]
default = ["FSDM"]
FSDM = [] # Full Sparse Density Matrix
FSSV = [] # Full Sparse State Vector
